<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.responsivetest.MainActivity3">

    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/judul"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_biodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_judul"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/biodata"
        android:textSize="20sp" />

    <TextView

        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_biodata"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/nama"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tv_charles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_biodata"
        android:layout_alignTop="@id/tv_nama"
        android:layout_alignBottom="@+id/tv_nama"
        android:layout_toEndOf="@+id/tv_nama"
        android:gravity="center"
        android:text="@string/charles" />


</RelativeLayout>